<resources>
    <string name="app_name">TedTalk</string>
    <string name="action_settings">Settings</string>
    <string name="home_title"><b>TED</b></string>



    <string name="lb_tv_tips">Tip: You can continue playing a talk while on another screen or app. Enable background playback in Settings.</string>
    <string name="lb_talk_brief"><b>You aren\'t at the mercy of your actions — your brain creates them</b></string>
    <string name="lb_speaker_name">Lisa Feldman Barret</string>
    <string name="lb_time_elapsed">18:15</string>

    <string name="lb_playlist_title"><b>Why not walk it out?</b></string>
    <string name="lb_talk_amount">7 talks</string>
    <string name="lb_time_elapsed_playlist">1:15:27</string>

    <string name="lb_first_letter">H</string>
    <string name="lb_name">Hsu Yee Mon</string>
    <string name="lb_login_status">Logged in</string>
    <string name="lb_my_lists">My Lists</string>
    <string name="lb_talk_status">No talks</string>
    <string name="lb_likes">Likes</string>
    <string name="lb_like_status">No talks</string>
    <string name="lb_download_status">No talks</string>
    <string name="lb_history_status">No talks</string>
    <string name="lb_downloads">Downloads</string>
    <string name="lb_history">History</string>

    <string name="lb_recommended_topics">Recommended Topics</string>
    <string name="lb_t1">State Buildings</string>
    <string name="lb_t2">Buddhism</string>
    <string name="lb_t3">Ted Books</string>

    <string name="lb_recommended_speakers">Recommended Speakers</string>
    <string name="lb_s1">Jeremy Jackson</string>
    <string name="lb_s2">Lyad Rahwan</string>
    <string name="lb_s3">Eban Bayer</string>

    <string name="lb_recommended_subtitle_lang">Recommended Subtitle Languages</string>
    <string name="lb_lang1">French (canada)</string>
    <string name="lb_lang2">Danish</string>
    <string name="lb_lang3">Hungarian</string>

    <string name="lb_recommended_events">Recommended Events</string>
    <string name="lb_e1">TED2016</string>
    <string name="lb_e2">TED2015</string>
    <string name="lb_e3">TED2014</string>


    <string name="lb_show_all_topics">Show all topics</string>
    <string name="lb_show_all_speakers">Show all speakers</string>
    <string name="lb_show_all_subtitle_lang">Show all subtitle languages</string>
    <string name="lb_show_all_events">Show all events</string>



</resources>
