<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_ted_talk_height"
        android:id="@+id/iv_dummy_ted_talk"
        android:src="@drawable/iv_dummy_ted_talk"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_talk_brief"
        android:text="@string/lb_talk_brief"
        style="@style/white_text_black_border"
        android:textSize="@dimen/text_regular_2x"
        android:layout_alignBottom="@id/iv_dummy_ted_talk"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_marginRight="64dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_time_elapsed"
        android:text="@string/lb_time_elapsed"
        android:layout_alignBottom="@id/iv_dummy_ted_talk"
        android:layout_alignParentRight="true"
        style="@style/white_text_black_border"
        android:textSize="@dimen/text_regular"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ic_more_vert"
        android:src="@drawable/ic_more_vert_24dp"
        android:layout_alignParentRight="true"
        android:tint="@color/white_full"
        android:layout_above="@id/tv_time_elapsed"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_speaker_name"
        android:text="@string/lb_speaker_name"
        android:layout_above="@id/tv_talk_brief"
        android:layout_alignLeft="@id/tv_talk_brief"
        android:textSize="@dimen/text_regular_2x"
        style="@style/white_text_black_border"/>
</RelativeLayout>