<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        android:id="@+id/cv_tips">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/iv_light_bulb"
                android:src="@drawable/ic_lightbulb_outline_24dp"
                android:paddingTop="@dimen/margin_medium_2"
                android:tint="@color/accent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/tv_tips"
                android:text="@string/lb_tv_tips"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular"/>

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/iv_close"
                android:src="@drawable/ic_close_24dp"
                android:paddingTop="@dimen/margin_medium_2"
                android:tint="@color/secondary_text"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/iv_ted_talk_height"
            android:id="@+id/iv_dummy_ted_talk"
            android:src="@drawable/iv_dummy_ted_talk"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_talk_brief"
            android:text="@string/lb_talk_brief"
            style="@style/white_text_black_border"
            android:textSize="@dimen/text_regular_2x"
            android:layout_alignBottom="@id/iv_dummy_ted_talk"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginRight="64dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_time_elapsed"
            android:text="@string/lb_time_elapsed"
            android:layout_alignBottom="@id/iv_dummy_ted_talk"
            android:layout_alignParentRight="true"
            style="@style/white_text_black_border"
            android:textSize="@dimen/text_regular"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginRight="@dimen/margin_medium"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>